@@ -52,60 +52,34 @@ public class CompetitionUtil {
 		int numberOfSeeds = competitionConfiguration.getNumberOfSeeds();
 		int numberOfPlayers = competitionConfiguration.getNumberOfPlayers();
 		int numberOfGroups = numberOfPlayers / numberOfSeeds ;
-		List<Group> groups = new ArrayList<Group>();
+		List<Group> groups = new ArrayList<>();
 
 		int addedPlayers = CollectionUtils.isEmpty(competition.getCompetitionPlayers()) ? 0 : competition.getCompetitionPlayers().size();
 		int totalPlayers = competitionConfiguration.getNumberOfPlayers();
 		int missingPlayers = totalPlayers - addedPlayers;
 		
-		logger.info("missingPlayers " + missingPlayers);
-		
 		// Add players to competition according to their points (first 'number_of_players')
-		boolean noMorePlayers = false;
-		if(missingPlayers > 0 || noMorePlayers) {
-			if (competitionConfiguration.isAutogeneratePlayers()) {
-				for (Player player : candidates) {
-					if (player.isActive() && missingPlayers > 0) {
-						if (!this.getCompetitionPlayerMap().containsKey(new CompetitionPlayerPK(competition, player))) {
-							CompetitionPlayer competitionPlayer = new CompetitionPlayer();
-							CompetitionPlayerPK pk = new CompetitionPlayerPK(competition, player);
-							competitionPlayer.setId(pk);
-							
-							this.getCompetitionPlayerMap().put(competitionPlayer.getId(), competitionPlayer);
-							competition.getCompetitionPlayers().add(competitionPlayer);
-							missingPlayers--;
-							logger.log(Level.INFO, "missingPlayers changed {0}. Added {1}", new Object[]{missingPlayers, player.getPoints()});
-						}
-					}
+		if (missingPlayers > 0 && competitionConfiguration.isAutogeneratePlayers()) {
+			for (Player player : candidates) {
+				if ((player.isActive() && missingPlayers > 0) && !this.getCompetitionPlayerMap().containsKey(new CompetitionPlayerPK(competition, player))) {
+					CompetitionPlayer competitionPlayer = new CompetitionPlayer();
+					CompetitionPlayerPK pk = new CompetitionPlayerPK(competition, player);
+					competitionPlayer.setId(pk);
+					
+					this.getCompetitionPlayerMap().put(competitionPlayer.getId(), competitionPlayer);
+					competition.getCompetitionPlayers().add(competitionPlayer);
+					missingPlayers--;
+					logger.log(Level.INFO, "missingPlayers changed {0}. Added {1}", new Object[]{missingPlayers, player.getPoints()});
 				}
-//				noMorePlayers = true;
 			}
 		}
 		
-		logger.log(Level.INFO, "NUMBER_OF_PLAYERS after {0}", competition.getCompetitionPlayers().size());
-		
-		competition.getCompetitionPlayers().forEach(competitionPlayer ->
-			logger.info("CompetitionPlayer " + competitionPlayer.getId().getPlayer())
-		);
-
-		// Create players pools 
-		logger.info("numberOfGroups " + numberOfGroups);
-//		List<Group> drawingGroups = new ArrayList<Group>(); 
-//		for (int i = 1; i <= number_of_groups; i++) {
-//			Group group = new Group();
-//			drawingGroups.add(group);
-//		}
-		
 		// Add seed players
 		List<CompetitionPlayer> sortedPlayers = competition.getCompetitionPlayers();
-		logger.info("sortedPlayers " + sortedPlayers.size());
-		logger.info("numberOfSeeds " + numberOfSeeds);
 		char groupName = 'A';
 		for (int i = 1; i <= numberOfSeeds; i++) {
 			Group group = new Group();
-			Long groupId = new Long(i);
-
-			List<Player> groupPlayers = new ArrayList<Player>();
+			List<Player> groupPlayers = new ArrayList<>();
 			CompetitionPlayer competitionPlayer = sortedPlayers.get(i-1);
 			competitionPlayer.setSeed(true);
 			competitionPlayer.setActive(true);
@@ -119,36 +93,26 @@ public class CompetitionUtil {
 			groups.add(group);
 		}
 		
-		// Show seed players
-		for (Group group : groups) {
-			logger.info("group " + group);
-		}
-
 		// Draw
-		int draw_start = 1;
-		int draw_end = 1;
+		int drawStart = 1;
+		int drawEnd = 1;
 		
 		// number_of_groups 0-2
 		// indexes: 0-7 (seeds, already covered), 8-15, 16-23, 24-31
 		// number_to_draw = 8
 		for (int i = 0; i < numberOfGroups-1; i++) {
 			int numberToDraw = numberOfSeeds;
-			ArrayList<Long> indexes = new ArrayList<Long>(); 
-			draw_start = (numberOfSeeds * (i+1));
-			draw_end = (numberOfSeeds * (i+2))-1;
-			logger.info("draw (" + draw_start + " : " + draw_end + ")");
-			for (int j = draw_start; j <= draw_end; j++) {
-				indexes.add(new Long(j));
+			ArrayList<Long> indexes = new ArrayList<>(); 
+			drawStart = (numberOfSeeds * (i+1));
+			drawEnd = (numberOfSeeds * (i+2))-1;
+			for (int j = drawStart; j <= drawEnd; j++) {
+				indexes.add(Long.valueOf(j));
 			}
-			logger.info("indexes " + indexes);
 			
 			// number_of_seeds 0-7
 			for (int j = 0; j < numberOfSeeds; j++) {
-				logger.info("indexes at work " + indexes);
 				int randomIndex = ThreadLocalRandom.current().nextInt(0, numberToDraw);
-				logger.info("randomIndex " + randomIndex);
 				CompetitionPlayer drawPlayer = sortedPlayers.get(indexes.get(randomIndex).intValue());
-//				drawPlayer.setGroup(groups.get(number_to_draw-1));
 				drawPlayer.setActive(true);
 				groups.get(numberToDraw-1).getPlayers().add(drawPlayer.getId().getPlayer());
 				indexes.remove(randomIndex);
@@ -157,23 +121,25 @@ public class CompetitionUtil {
 			
 		}
 		
-		// Checking group coef (balance of power of the groups)
+		checkBalanceOfPower(groups);
+		logger.info("createGroups END");
+		return groups;
+	}
+
+	// Checking group coef (balance of power: proportion between max and min sum of players points)
+	// If it is too high, groups are not balanced. 
+	public void checkBalanceOfPower(List<Group> groups) {
 		float minPoints = 9999;
 		float maxPoints = 0;
 		for (Group group : groups) {
 			if(minPoints > group.groupPoints()) minPoints =  group.groupPoints();
 			if(maxPoints < group.groupPoints()) maxPoints =  group.groupPoints();
-			logger.info("group " + group);
 		}
-		logger.info("group coef " + (maxPoints / minPoints));
-
-
-		logger.info("createGroups END");
-		return groups;
+		logger.log(Level.INFO, "group coef {0}", (maxPoints / minPoints));
 	}
-
+	
 	public List<Game> createGames(Competition competition) {
-		List<Game> games = new ArrayList<Game>();
+		List<Game> games = new ArrayList<>();
 		
 		for (int i = 0; i < competition.getGroups().size(); i++) {
 			games.addAll(generateGamesForGroup(competition, competition.getGroups().get(i)));
@@ -188,39 +154,30 @@ public class CompetitionUtil {
 	public List<Game> generateGamesForGroup(Competition competition, Group group) {
 		logger.info("generateGamesForGroup START");
 		
-		List<Game> games = new ArrayList<Game>();
+		List<Game> games = new ArrayList<>();
 
-		int number_of_players = group.getPlayers().size();
+		int numberOfPlayers = group.getPlayers().size();
 		// if we have odd number of players, we'll add 1 (bye)
-		if (number_of_players % 2 == 1) {
-			number_of_players++;
+		if (numberOfPlayers % 2 == 1) {
+			numberOfPlayers++;
 		}
-		int number_of_rounds = number_of_players - 1;
-		int number_of_games = number_of_players * number_of_rounds;
+		int numberOfRounds = numberOfPlayers - 1;
+//		int numberOfGames = numberOfPlayers * numberOfRounds;
 
-		logger.info("number_of_players " + number_of_players);
-		logger.info("number_of_rounds " + number_of_rounds);
-		logger.info("number_of_games " + number_of_games);
+		List<Player> first = new ArrayList<>();
+		List<Player> second = new ArrayList<>();
 
-		ArrayList<Player> first = new ArrayList<Player>();
-		ArrayList<Player> second = new ArrayList<Player>();
-
-		for (int i = 0; i < number_of_players; i++) {
-			if (i < number_of_players / 2) {
+		for (int i = 0; i < numberOfPlayers; i++) {
+			if (i < numberOfPlayers / 2) {
 				first.add(group.getPlayers().get(i));
 			} else {
 				second.add(0, group.getPlayers().get(i));
 			}
 		}
 
-		for (int round = 1; round <= number_of_rounds; round++) {
+		for (int round = 1; round <= numberOfRounds; round++) {
 			// Round x
-			System.out.println("Before " + round + ": first " + first);
-			System.out.println("Before " + round + ": second" + second);
-			System.out.println("Round " + round);
-			for (int i = 0; i < number_of_players/2; i++) {
-				logger.info("" + first.get(i) + " : " + second.get(i));
-
+			for (int i = 0; i < numberOfPlayers/2; i++) {
 				Game game = new Game();
 				game.setPlayerHome(first.get(i));
 				game.setPlayerAway(second.get(i));
@@ -233,25 +190,16 @@ public class CompetitionUtil {
 	
 			// first arrays transformation
 			// remove elements
-			Player move_first = first.get(first.size()-1);
+			Player moveFirst = first.get(first.size()-1);
 			first.remove(first.size()-1);
-			Player move_second = second.get(0);
+			Player moveSecond = second.get(0);
 			second.remove(0);
 			// add elements
-			first.add(1, move_second);
-			second.add(move_first);
+			first.add(1, moveSecond);
+			second.add(moveFirst);
 
 		}
 
-		
-		for (Game game : games) {
-			logger.info("Game : " + game);
-		}
-		
-		
-		
-		
-		
 		logger.info("generateGamesForGroup END");
 		return games;
 	}
@@ -259,10 +207,6 @@ public class CompetitionUtil {
 	public void generateSecondPart(Competition competition) {
 		logger.info("competition-util generateSecondPart() ");
 
-		logger.info("GROUPS  " + competition.getGroups().size());
-		logger.info("PLAYERS " + competition.getCompetitionPlayers().size());
-		logger.info("GAMES   " + competition.getGames().size());
-		
 		// temporary, for testing
 		generateResults(competition);
 //		groupSort(competition);
@@ -280,13 +224,8 @@ public class CompetitionUtil {
 
 	
 	public void generateResults(Competition competition) {
-		logger.info("GAMES   " + competition.getGames().size());
-		
-		for (Game game : competition.getGames()) {
-//			if (game.getGroupId() == 98) {
-				generateGameResult(game);
-//			}
-		}
+//		competition.getGames().forEach(game -> generateGameResult(game));
+		competition.getGames().forEach(this::generateGameResult);
 	}
 	
 	public void generateGameResult(Game game) {
@@ -296,61 +235,60 @@ public class CompetitionUtil {
 		logger.info("Home " + home.getFirstName() + " " + home.getLastName() + "(" + home.getPoints() + ")");
 		logger.info("Away " + away.getFirstName() + " " + away.getLastName() + "(" + away.getPoints() + ")");
 		
-		int hPoints = home.getPoints().intValue();
-		int aPoints = away.getPoints().intValue();
+//		int hPoints = home.getPoints().intValue();
+//		int aPoints = away.getPoints().intValue();
 		
-		int number_to_draw = hPoints + aPoints;
-		int randomIndex = ThreadLocalRandom.current().nextInt(0, number_to_draw);
-		logger.info("randomIndex " + randomIndex);
+//		int numberToDraw = hPoints + aPoints;
+//		int randomIndex = ThreadLocalRandom.current().nextInt(0, numberToDraw);
 		
-		int set_points_home[] = new int[5];
-		int set_points_away[] = new int[5];
-		int sets_home = 0;
-		int sets_away = 0;
-		for (int i = 0; i < 5 && sets_home < 3  && sets_away < 3; i++) {
-			int random_home = ThreadLocalRandom.current().nextInt(0, 11);
-			int random_away = ThreadLocalRandom.current().nextInt(0, 11);
-			if(random_home > random_away) {
-				sets_home++;
-				if(11 > random_away + 2) {
-					set_points_home[i] = 11;
-					set_points_away[i] = random_away;
+		int[] setPointsHome = new int[5];
+		int[] setPointsAway = new int[5];
+		int setsHome = 0;
+		int setsAway = 0;
+		for (int i = 0; i < 5 && setsHome < 3  && setsAway < 3; i++) {
+			int randomHome = ThreadLocalRandom.current().nextInt(0, 11);
+			int randomAway = ThreadLocalRandom.current().nextInt(0, 11);
+			if(randomHome > randomAway) {
+				setsHome++;
+				if(11 > randomAway + 2) {
+					setPointsHome[i] = 11;
+					setPointsAway[i] = randomAway;
 				} else {
-					set_points_home[i] = random_away + 2;
-					set_points_away[i] = random_away;
+					setPointsHome[i] = randomAway + 2;
+					setPointsAway[i] = randomAway;
 				}
 			} else {
-				sets_away++;
-				if(11 > random_home + 2) {
-					set_points_home[i] = random_home;
-					set_points_away[i] = 11;
+				setsAway++;
+				if(11 > randomHome + 2) {
+					setPointsHome[i] = randomHome;
+					setPointsAway[i] = 11;
 				} else {
-					set_points_home[i] = random_home;
-					set_points_away[i] = random_home + 2;
+					setPointsHome[i] = randomHome;
+					setPointsAway[i] = randomHome + 2;
 				}
 			}
 		}
 
-		game.setPointsHome(sets_home);
-		game.setPointsAway(sets_away);
+		game.setPointsHome(setsHome);
+		game.setPointsAway(setsAway);
 		
-		List<GameSet> sets = new ArrayList<GameSet>();
+		List<GameSet> sets = new ArrayList<>();
 		game.setSets(sets);
-		for (int i = 0; i < set_points_away.length; i++) {
-			if (!(set_points_home[i] == 0 && set_points_away[i] == 0)) {
+		for (int i = 0; i < setPointsAway.length; i++) {
+			if (!(setPointsHome[i] == 0 && setPointsAway[i] == 0)) {
 				GameSet gameSet = new GameSet();
 				GameSetId gameSetId = new GameSetId();
-				gameSetId.setSetNo(new Long(i+1));
+				gameSetId.setSetNo(Long.valueOf(i+1));
 				gameSetId.setGame(game);
 				gameSet.setId(gameSetId);
-				gameSet.setPointsHome(set_points_home[i]);
-				gameSet.setPointsAway(set_points_away[i]);
+				gameSet.setPointsHome(setPointsHome[i]);
+				gameSet.setPointsAway(setPointsAway[i]);
 				sets.add(gameSet);
 			}
 		}
 
-		logger.info("Sets home 1: " + Arrays.toString(set_points_home) );
-		logger.info("Sets away 1: " + Arrays.toString(set_points_away) );
+//		logger.info("Sets home 1: " + Arrays.toString(set_points_home) );
+//		logger.info("Sets away 1: " + Arrays.toString(set_points_away) );
 
 		if (game.getPointsAway() > game.getPointsHome()) {
 			logger.info("Game away win: " + away.getFirstName() + " " + away.getLastName() + " won " + game.getPointsHome() + " : " + game.getPointsAway() );
@@ -362,11 +300,9 @@ public class CompetitionUtil {
 
 	
 	// Check if competition has all elements for generating games (players, seeds...)
-	public boolean generateCheck(Optional<Competition> competition) {
+	public boolean checkIfCompetitionGenerateIsAllowed(Optional<Competition> competition) {
 		
 		checkIfEmpty(competition);
-		
-		checkIfInProgress(competition);
 		
 		checkIfCompleted(competition);
 		
@@ -377,46 +313,34 @@ public class CompetitionUtil {
 		return true;
 	}
 	
+	// If competiton not found 
 	private void checkIfEmpty(Optional<Competition> competition) {
-		
 		if (!competition.isPresent() ) throw new CompetitionNotFoundException();
-
 	}
 
-	private void checkIfInProgress(Optional<Competition> competition) {
-
-		if (competition.isPresent() && competition.get().isCompleted()) throw new CompetitionAlreadyCompletedException();
-
-	}
-	
+	// If competiton is completed
 	private void checkIfCompleted(Optional<Competition> competition) {
-
 		if (competition.isPresent() && competition.get().isCompleted()) throw new CompetitionAlreadyCompletedException();
-
 	}
 	
+	// If number of players in competiton is not correct (different from value in configuration: NUMBER_OF_PLAYERS)
 	private void checkNumberOfPlayers(List<CompetitionPlayer> competitionPlayers) {
-
-		// Check number of players
-		if (!competitionConfiguration.isAutogeneratePlayers()) {
-			if(competitionPlayers == null || competitionPlayers.size() != competitionConfiguration.getNumberOfPlayers()) {
+		if (!competitionConfiguration.isAutogeneratePlayers() 
+			&& (competitionPlayers == null || (competitionPlayers.size() != competitionConfiguration.getNumberOfPlayers()) ) 
+		) {
 				throw new CompetitionNotCorrectNumberOfPlayersException();
-			}
 		}
-
 	}
 	
+	// If already exists games in competiton
 	private void checkNumberOfGames(List<Game> games) {
-
 		if(games != null && !games.isEmpty()) throw new CompetitionNotCompletedException();
-
 	}
 
 	
+	// TODO: activate competition (check first if current competition may be finished) 
 	// Check if competition has all elements for generating games (players, seeds...)
 	public boolean activateCheck(Competition competition) {
-		
-//		boolean setupCompleted = false;
 		
 		// Check number of players
 		boolean setupCompleted = ((competition.getCompetitionPlayers() == null) ? 0 : competition.getCompetitionPlayers().size()) == competitionConfiguration.getNumberOfPlayers();
@@ -426,7 +350,7 @@ public class CompetitionUtil {
 		//		completed = (competition.getPlayers().size() == Long.parseLong(map.get("NUMBER_OF_SEEDS").getValue()))
 
 		// Check number of games - 0
-		setupCompleted = competition.getGames() != null && competition.getGames().size() > 0 ? true : false;
+		setupCompleted = competition.getGames().isEmpty();
 		if (!setupCompleted) throw new CompetitionNotCorrectNumberOfPlayersException();
 
 	
@@ -437,36 +361,30 @@ public class CompetitionUtil {
 	public static void main(String[] args) {
 
 		int rounds = 5;
-		int number_of_players = 6;
+		int numberOfPlayers = 6;
 		
-		ArrayList<Integer> first = new ArrayList<Integer>();
-		ArrayList<Integer> second = new ArrayList<Integer>();
+		List<Integer> first = new ArrayList<>();
+		List<Integer> second = new ArrayList<>();
 
-		for (int i = 1; i <= number_of_players; i++) {
-			if (i <= number_of_players / 2) {
-				first.add(new Integer(i));
+		for (int i = 1; i <= numberOfPlayers; i++) {
+			if (i <= numberOfPlayers / 2) {
+				first.add(Integer.valueOf(i));
 			} else {
-				second.add(0, new Integer(i));
+				second.add(0, Integer.valueOf(i));
 			}
 		}
 
 		for (int x = 1; x <= rounds; x++) {
 			// Round x
-			System.out.println("Before " + x + ": " + first + ", " + second);
-			System.out.println("Round " + x);
-			for (int i = 0; i < number_of_players/2; i++) {
-				System.out.println("" + first.get(i) + " : " + second.get(i));
-			}
-	
 			// first arrays transformation
 			// remove elements
-			Integer move_first = first.get(first.size()-1);
+			Integer moveFirst = first.get(first.size()-1);
 			first.remove(first.size()-1);
-			Integer move_second = second.get(0);
+			Integer moveSecond = second.get(0);
 			second.remove(0);
 			// add elements
-			first.add(1, move_second);
-			second.add(move_first);
+			first.add(1, moveSecond);
+			second.add(moveFirst);
 
 		}
 	}
